将各个程序接入到 Google Breakpad 崩溃处理模块

--- a/.gitignore
+++ b/.gitignore
@@ -125,10 +125,23 @@ Thumbs.db
 /pcre8.dll
 /zlib.dll
 
+# ====================================================
 # Pandas Project
-__pycache__
+# ====================================================
+
+# Dlls
+/dbghelp.dll
+
+# CrashDump
+/log/dumps/*.dmp
+
+# Intel Parallel Studio XE
 My Advisor Results*
 My Amplifier Results*
 My Inspector Results*
+
+# Python
+__pycache__
+
+# Other
 /src/*/*.aps
-/dbghelp.dll
