--- a/src/common/common.vcxproj.filters
+++ b/src/common/common.vcxproj.filters
@@ -89,6 +89,9 @@
     <ClInclude Include="utf8.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="minidump.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cli.cpp">
@@ -161,6 +164,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="utf8.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="minidump.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
