--- a/src/common/common-minicore.vcxproj
+++ b/src/common/common-minicore.vcxproj
@@ -29,7 +29,7 @@
     <ClInclude Include="malloc.hpp" />
     <ClInclude Include="mapindex.hpp" />
     <ClInclude Include="md5calc.hpp" />
-    <ClInclude Include="minidump.hpp" />
+    <ClInclude Include="crashdump.hpp" />
     <ClInclude Include="mmo.hpp" />
     <ClInclude Include="msg_conf.hpp" />
     <ClInclude Include="nullpo.hpp" />
@@ -50,7 +50,7 @@
     <ClCompile Include="malloc.cpp" />
     <ClCompile Include="mapindex.cpp" />
     <ClCompile Include="md5calc.cpp" />
-    <ClCompile Include="minidump.cpp" />
+    <ClCompile Include="crashdump.cpp" />
     <ClCompile Include="msg_conf.cpp" />
     <ClCompile Include="nullpo.cpp" />
     <ClCompile Include="random.cpp" />
