--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-AC_INIT(rAthena)
+AC_INIT(Pandas)
 AC_REVISION($Revision$)
 AC_PREREQ([2.59])
 AC_LANG([C++])
@@ -11,6 +11,9 @@ AC_CONFIG_FILES([Makefile src/common/Makefile])
 AC_CONFIG_FILES([3rdparty/libconfig/Makefile 3rdparty/yaml-cpp/Makefile])
 AC_CONFIG_FILES([src/char/Makefile src/login/Makefile])
 AC_CONFIG_FILES([src/map/Makefile src/tool/Makefile])
+
+m4_include([tools/m4/ax_subdirs_configure.m4])
+AX_SUBDIRS_CONFIGURE([3rdparty/breakpad], [--disable-tools])
 
 AC_GNU_SOURCE
 
@@ -46,7 +49,7 @@ AC_ARG_ENABLE(
 	[packetver],
 	AC_HELP_STRING(
 		[--enable-packetver=ARG],
-		[Sets the PACKETVER define. (see src/common/mmo.h)]
+		[Sets the PACKETVER define. (see src/common/mmo.hpp)]
 	),
 	[enable_packetver="$enableval"],
 	[enable_packetver=""]
@@ -295,14 +298,19 @@ AC_ARG_ENABLE(
 
 
 #
-# Optionally set the maximum number of network connections
-# the core will be able to handle
+# Optionally set the max number of network conenctions
+# the core will be support
 #
 AC_ARG_WITH(
 	[maxconn],
 	AC_HELP_STRING(
 		[--with-maxconn@<:@=ARG@:>@],
-		[optionally set the maximum connections the core can handle. By default the system header value is used.]
+		[
+			optionally set the maximum connections the core can handle.
+			By default the system header value will be used.
+			This will only be the compile time limit, make sure you set
+			the correct limit with ulimit on your OS.
+		]
 	),
 	[
 		if ! test "$withval" -ge 0 -o "$withval" -lt 0 2>&- ; then
