使用 CMake 进行编译时能支持使用 breakpad 进行崩溃转储

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -64,6 +64,7 @@ set( COMMON_MINI_HEADERS
 	"${COMMON_SOURCE_DIR}/strlib.hpp"
 	"${COMMON_SOURCE_DIR}/assistant.hpp"
 	"${COMMON_SOURCE_DIR}/utf8.hpp"
+	"${COMMON_SOURCE_DIR}/crashdump.hpp"
 	${LIBCONFIG_HEADERS} # needed by showmsg.hpp
 	${COMMON_ADDITIONALL_HPP} # needed by Windows
 	CACHE INTERNAL "" )
@@ -74,6 +75,7 @@ set( COMMON_MINI_SOURCES
 	"${COMMON_SOURCE_DIR}/strlib.cpp"
 	"${COMMON_SOURCE_DIR}/assistant.cpp"
 	"${COMMON_SOURCE_DIR}/utf8.cpp"
+	"${COMMON_SOURCE_DIR}/crashdump.cpp"
 	${LIBCONFIG_SOURCES} # needed by showmsg.cpp
 	${COMMON_ADDITIONALL_CPP} # needed by Windows
 	CACHE INTERNAL "" )
@@ -110,6 +112,7 @@ set( COMMON_BASE_HEADERS
 	"${COMMON_SOURCE_DIR}/utilities.hpp"
 	"${COMMON_SOURCE_DIR}/assistant.hpp"
 	"${COMMON_SOURCE_DIR}/utf8.hpp"
+	"${COMMON_SOURCE_DIR}/crashdump.hpp"
 	${LIBCONFIG_HEADERS} # needed by conf.hpp/showmsg.hpp
 	${COMMON_ADDITIONALL_HPP} # needed by Windows
 	CACHE INTERNAL "common_base headers" )
@@ -136,18 +139,19 @@ set( COMMON_BASE_SOURCES
 	"${COMMON_SOURCE_DIR}/utilities.cpp"
 	"${COMMON_SOURCE_DIR}/assistant.cpp"
 	"${COMMON_SOURCE_DIR}/utf8.cpp"
+	"${COMMON_SOURCE_DIR}/crashdump.cpp"
 	${LIBCONFIG_SOURCES} # needed by conf.cpp/showmsg.cpp
 	${COMMON_ADDITIONALL_CPP} # needed by Windows
 	CACHE INTERNAL "common_base sources" )
 set( COMMON_BASE_INCLUDE_DIRS
 	${LIBCONFIG_INCLUDE_DIRS}
-  ${YAML_INCLUDE_DIRS}
+	${YAML_INCLUDE_DIRS}
 	CACHE INTERNAL "common_base include dirs" )
 set( COMMON_BASE_DEFINITIONS
 	${LIBCONFIG_DEFINITIONS}
 	CACHE INTERNAL "common_base definitions" )
-set( LIBRARIES ${GLOBAL_LIBRARIES} ${ZLIB_LIBRARIES} yaml-cpp )
-set( INCLUDE_DIRS ${GLOBAL_INCLUDE_DIRS} ${YAML_INCLUDE_DIRS} ${ZLIB_INCLUDE_DIRS} ${COMMON_BASE_INCLUDE_DIRS}} )
+set( LIBRARIES ${GLOBAL_LIBRARIES} ${ZLIB_LIBRARIES} yaml-cpp breakpad )
+set( INCLUDE_DIRS ${GLOBAL_INCLUDE_DIRS} ${YAML_INCLUDE_DIRS} ${BREAKPAD_INCLUDE_DIRS} ${ZLIB_INCLUDE_DIRS} ${COMMON_BASE_INCLUDE_DIRS}} )
 set( DEFINITIONS "${GLOBAL_DEFINITIONS} ${COMMON_BASE_DEFINITIONS}" )
 set( SOURCE_FILES ${COMMON_BASE_HEADERS} ${COMMON_BASE_SOURCES} )
 source_group( common FILES ${COMMON_BASE_HEADERS} ${COMMON_BASE_SOURCES} )
