在上报崩溃转储文件时能够进行简单的身份验证

--- a/.gitignore
+++ b/.gitignore
@@ -142,7 +142,8 @@ My Inspector Results*
 
 # Python
 __pycache__
-tools/python/cache
+/tools/python/cache
+/tools/python/pyhelp.conf
 
 # IDE
 .vscode
