--- a/src/common/common-minicore.vcxproj.filters
+++ b/src/common/common-minicore.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClInclude Include="crashdump.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cryptopp.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cli.cpp">
@@ -125,6 +128,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="crashdump.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cryptopp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
