--- a/tools/python/requirements.txt
+++ b/tools/python/requirements.txt
@@ -1,5 +1,6 @@
-Flask_Limiter==1.0.1
-Flask==1.1.0
-colorama==0.4.1
 chardet==3.0.4
-GitPython==2.1.11
+pefile==2019.4.18
+colorama==0.4.1
+pdbparse==1.4
+python-dotenv==0.10.3
+GitPython==2.1.12
