--- a/src/char/Makefile.in
+++ b/src/char/Makefile.in
@@ -20,15 +20,15 @@ YAML_CPP_AR = ../../3rdparty/yaml-cpp/obj/yaml-cpp.a
 YAML_CPP_H = $(shell find ../../3rdparty/yaml-cpp/ -type f -name "*.h")
 YAML_CPP_INCLUDE = -I../../3rdparty/yaml-cpp/include
 
-#####################################################################
-# BEGIN - 在 Pandas 中我们需要 GOOGLE BREAKPAD 来生成转储文件
-#####################################################################
+# 以下内容添加自 PandasWS 开发团队
 BREAKPAD_H = $(shell find ../../3rdparty/breakpad/ -type f -name "*.h")
 BREAKPAD_AR = ../../3rdparty/breakpad/src/client/linux/libbreakpad_client.a
 BREAKPAD_INCLUDE = -I../../3rdparty/breakpad/src
-#####################################################################
-# END - 在 Pandas 中我们需要 GOOGLE BREAKPAD 来生成转储文件
-#####################################################################
+
+CRYPTOPP_H = $(shell find ../../3rdparty/cryptopp/ -type f -name "*.h")
+CRYPTOPP_AR = ../../3rdparty/cryptopp/libcryptopp.a
+CRYPTOPP_INCLUDE = -I../../3rdparty/
+# 以上内容添加自 PandasWS 开发团队
 
 HAVE_MYSQL=@HAVE_MYSQL@
 ifeq ($(HAVE_MYSQL),yes)	
@@ -61,9 +61,9 @@ help:
 #####################################################################
 
 
-char-server: obj $(CHAR_DIR_OBJ) $(LIBCONFIG_AR) $(COMMON_AR) $(YAML_CPP_AR) $(BREAKPAD_AR)
+char-server: obj $(CHAR_DIR_OBJ) $(LIBCONFIG_AR) $(COMMON_AR) $(YAML_CPP_AR) $(BREAKPAD_AR) $(CRYPTOPP_AR)
 	@echo "	LD	@OCHR@@EXEEXT@"
-	@@CXX@ @LDFLAGS@ -o ../../@OCHR@@EXEEXT@ $(CHAR_DIR_OBJ) $(LIBCONFIG_AR) $(COMMON_AR) $(LIBCONFIG_OBJ) $(YAML_CPP_AR) $(BREAKPAD_AR) @LIBS@ @MYSQL_LIBS@
+	@@CXX@ @LDFLAGS@ -o ../../@OCHR@@EXEEXT@ $(CHAR_DIR_OBJ) $(LIBCONFIG_AR) $(COMMON_AR) $(LIBCONFIG_OBJ) $(YAML_CPP_AR) $(BREAKPAD_AR) $(CRYPTOPP_AR) @LIBS@ @MYSQL_LIBS@
 
 needs_mysql:
 	@echo "MySQL not found or disabled by the configure script"
@@ -73,9 +73,9 @@ obj:
 	@echo "	MKDIR	obj"
 	@-mkdir obj
 	
-obj/%.o: %.cpp $(CHAR_H) $(COMMON_H) $(LIBCONFIG_H) $(YAML_CPP_H) $(BREAKPAD_H)
+obj/%.o: %.cpp $(CHAR_H) $(COMMON_H) $(LIBCONFIG_H) $(YAML_CPP_H) $(BREAKPAD_H) $(CRYPTOPP_H)
 	@echo "	CXX	$<"
-	@@CXX@ @CXXFLAGS@ $(COMMON_INCLUDE) $(LIBCONFIG_INCLUDE) $(YAML_CPP_INCLUDE) $(BREAKPAD_INCLUDE) @MYSQL_CFLAGS@ @CPPFLAGS@ -c $(OUTPUT_OPTION) $<
+	@@CXX@ @CXXFLAGS@ $(COMMON_INCLUDE) $(LIBCONFIG_INCLUDE) $(YAML_CPP_INCLUDE) $(BREAKPAD_INCLUDE) $(CRYPTOPP_INCLUDE) @MYSQL_CFLAGS@ @CPPFLAGS@ -c $(OUTPUT_OPTION) $<
 
 # missing object files
 $(COMMON_AR):
@@ -87,5 +87,10 @@ $(LIBCONFIG_AR):
 $(YAML_CPP_AR):
 	@$(MAKE) -C ../../3rdparty/yaml-cpp
 
+# 以下内容添加自 PandasWS 开发团队
 $(BREAKPAD_AR):
 	@$(MAKE) -C ../../3rdparty/breakpad
+
+$(CRYPTOPP_AR):
+	@CXXFLAGS="-DNDEBUG @CXXFLAGS@" $(MAKE) -C ../../3rdparty/cryptopp libcryptopp.a
+# 以上内容添加自 PandasWS 开发团队
