--- a/src/map/Makefile.in
+++ b/src/map/Makefile.in
@@ -26,7 +26,7 @@ BREAKPAD_INCLUDE = -I../../3rdparty/breakpad/src
 
 CRYPTOPP_H = $(shell find ../../3rdparty/cryptopp/ -type f -name "*.h")
 CRYPTOPP_AR = ../../3rdparty/cryptopp/libcryptopp.a
-CRYPTOPP_INCLUDE = -I../../3rdparty/
+CRYPTOPP_INCLUDE = -I../../3rdparty/cryptopp
 # 以上内容添加自 PandasWS 开发团队
 
 HAVE_MYSQL=@HAVE_MYSQL@
