使 cmake 方式编译可以顺便运行程序测试一下

--- a/.travis.yml
+++ b/.travis.yml
@@ -156,6 +156,10 @@ matrix:
          - cd cbuild
          - cmake -G "Unix Makefiles" ..
          - make || travis_terminate 1
+         - cd ..
+         - ./login-server --run-once
+         - ./char-server --run-once
+         - ./map-server --run-once
 # MariaDB
     - os: linux
       addons:
